Naprawa bledow, optymalizacja kodu

--- a/AnimationPSExample/index.html
+++ b/AnimationPSExample/index.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav class="navbar" data-navbarps="rose">
+    <!-- green, lightgray, blue, info, warning, alert, rose  -->
+    <nav class="navbar" data-navbarps="green">
         <ul>
-            <li class="ul-li" data-hrefps="home">Home</li>
+            <li class="ul-li" data-hrefps="home">Home</li> 
             <li class="ul-li" data-hrefps="team">Team</li>
             <li class="ul-li" data-hrefps="aboutus">Aboutus</li>
             <li class="ul-li" data-hrefps="contact">Contact</li>
         </ul>
     </nav>
 
-    <div class="burger" data-burgerps="rose"></div>
+    <div class="burger" data-burgerps="green"></div>
 
     <section class="home" data-hrefposps="home">
         <h1>home</h1>
